# drake-1

./: .travis.yml
bindings/pydrake/: geometry_py.cc  math_py.cc
bindings/pydrake/manipulation/: planner_py.cc
bindings/pydrake/multibody/: BUILD.bazel  multibody_tree_py.cc  plant_py.cc
bindings/pydrake/systems/: BUILD.bazel  framework_py_semantics.cc  framework_py_systems.cc  lcm_py.cc  primitives_py.cc
common/trajectories/: piecewise_polynomial.cc
examples/iiwa_soccer/: BUILD.bazel  README.md  box_controller.cc  box_controller.h  box_controller.py  box_controller_eval.py  box_controller_test.py  box_soccer_simulation.cc  box_soccer_simulation.py  controller.cc  controller.h  controller_base.py  embedded_box_soccer_sim.py  kuka_soccer_simulation.cc  manipulation_plan.h  manipulation_plan.py  old.py  old_test.py
examples/iiwa_soccer/models/: box.sdf  box.sdf.unactuated  ground.sdf  soccer_ball.sdf  soccer_ball.urdf
examples/iiwa_soccer/plan_box/: .notes.txt.swp  box_positions.mat
examples/iiwa_soccer/plan_box_curve/: ball_com_positions.mat  box_positions.mat
examples/iiwa_soccer/test/: controller_test.cc  manipulation_plan_test.cc
examples/multibody/acrobot/: BUILD.bazel  passive_simulation.cc
examples/rod2d/: rod2d-inl.h  rod2d.h  rod2d_sim.cc
lcmtypes/: BUILD.bazel  lcmt_generic_arrow_for_viz.lcm  lcmt_generic_arrows_for_viz.lcm
multibody/constraint/: BUILD.bazel  constraint_problem_data.h  constraint_solver.h
multibody/constraint/test/: constraint_solver_test.cc
multibody/multibody_tree/: multibody_tree.h
multibody/multibody_tree/multibody_plant/: multibody_plant.cc  multibody_plant.h
multibody/plant/: BUILD.bazel  implicit_stribeck_solver.cc  multibody_plant.cc  multibody_plant.h  spatial_force_output.h  spatial_forces_to_lcm.cc
solvers/: moby_lcp_solver.cc
systems/analysis/: simulator.h
systems/analysis/test/: simulator_test.cc
systems/framework/: leaf_system.h  system_base.cc
systems/lcm/: BUILD.bazel  generic_arrows_for_viz_output.cc  generic_arrows_for_viz_output.h
tools/workspace/drake_visualizer/: drake_visualizer.py
tools/workspace/drake_visualizer/plugin/: BUILD.bazel  show_arrows.py  show_forces.py  use_builtin_scripts.py
